--- a/assignments/llm.ipynb
+++ b/assignments/llm.ipynb
@@ -38,31 +38,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports for the project\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from decouple import config\n",
+    "from ibm_watsonx_ai import APIClient\n",
+    "from ibm_watsonx_ai import Credentials\n",
+    "from ibm_watsonx_ai.foundation_models import ModelInference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the environment variables using python-decouple\n",
+    "# The .env file should be in the root of the project\n",
+    "# The .env file should NOT be committed to the repository\n",
+    "\n",
+    "WX_API_KEY = config('WX_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Working Directory: /Users/sarahaagaard/Documents/sarah/HA IT/4. år/8. semester/Artificial Intelligence and Machine Learning/AIML25/mas/ma2\n",
+      "Files in Directory: ['assignments', 'LICENSE', 'environment.yml', 'README.md', '.gitignore', '.env', 'guides', 'test.hf', '.env.example', '.git', '.vscode', 'data']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"Current Working Directory:\", os.getcwd())\n",
+    "print(\"Files in Directory:\", os.listdir())  # Check if .env is listed here\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ API Key Loaded Successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Retrieve the API key\n",
+    "api_key = os.getenv(\"WX_API_KEY\")\n",
+    "\n",
+    "if api_key:\n",
+    "    print(\"✅ API Key Loaded Successfully!\")\n",
+    "else:\n",
+    "    print(\"❌ Error: API Key not found. Check your .env file.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Load the data\n",
-    "\n",
-    "We can load this data directly from [Hugging Face Datasets](https://huggingface.co/docs/datasets/) - The HuggingFace Hub- into a Pandas DataFrame. Pretty neat!\n",
-    "\n",
-    "**Note**: This cell will download the dataset and keep it in memory. If you run this cell multiple times, it will download the dataset multiple times.\n",
-    "\n",
-    "You are welcome to increase the `frac` parameter to load more data."
+    "### 1. Connecting to the WatsonX.ai Credentials API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credentials = Credentials(\n",
+    "    url = \"https://us-south.ml.cloud.ibm.com\", # set the URL to dallas\n",
+    "    api_key = WX_API_KEY\n",
+    ")\n",
+    "\n",
+    "client = APIClient(\n",
+    "    credentials=credentials, \n",
+    "    project_id=\"e2fff713-c98f-4236-8836-47cbe38cd27d\" # insert my unique project ID\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Testing the connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = ModelInference(\n",
+    "    api_client=client,\n",
+    "    model_id=\"ibm/granite-13b-instruct-v2\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| PARAMETER             | TYPE                                   | EXAMPLE VALUE                                                                                                                             |\n",
+      "+=======================+========================================+===========================================================================================================================================+\n",
+      "| decoding_method       | str, TextGenDecodingMethod, NoneType   | sample                                                                                                                                    |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| length_penalty        | dict, TextGenLengthPenalty, NoneType   | {'decay_factor': 2.5, 'start_index': 5}                                                                                                   |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| temperature           | float, NoneType                        | 0.5                                                                                                                                       |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| top_p                 | float, NoneType                        | 0.2                                                                                                                                       |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| top_k                 | int, NoneType                          | 1                                                                                                                                         |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| random_seed           | int, NoneType                          | 33                                                                                                                                        |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| repetition_penalty    | float, NoneType                        | 2                                                                                                                                         |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| min_new_tokens        | int, NoneType                          | 50                                                                                                                                        |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| max_new_tokens        | int, NoneType                          | 1000                                                                                                                                      |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| stop_sequences        | list, NoneType                         | 200                                                                                                                                       |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| time_limit            | int, NoneType                          | 600000                                                                                                                                    |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| truncate_input_tokens | int, NoneType                          | 200                                                                                                                                       |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| return_options        | dict, ReturnOptionProperties, NoneType | {'input_text': True, 'generated_tokens': True, 'input_tokens': True, 'token_logprobs': True, 'token_ranks': False, 'top_n_tokens': False} |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| include_stop_sequence | bool, NoneType                         | True                                                                                                                                      |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| prompt_variables      | dict, NoneType                         | {'doc_type': 'emails', 'entity_name': 'Golden Retail'}                                                                                    |\n",
+      "+-----------------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ibm_watsonx_ai.foundation_models.schema import TextGenParameters\n",
+    "\n",
+    "TextGenParameters.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import classification_report \n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Load the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((760, 2),)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label_map = {\n",
     "    0: 'World',\n",
@@ -104,6 +282,186 @@
     "del test\n",
     "\n",
     "test_df.shape, # train_df.shape, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Set model parameers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARAMS = TextGenParameters(\n",
+    "    temperature=0,              # Higher temperature means more randomness - In this case we don't want randomness\n",
+    "    max_new_tokens=10,          # Maximum number of tokens to generate\n",
+    "    stop_sequences=[\".\", \"\\n\"], # Stop generating text when these sequences are encountered\n",
+    ")\n",
+    "\n",
+    "model = ModelInference(\n",
+    "    api_client=client,\n",
+    "    model_id=\"ibm/granite-13b-instruct-v2\",  # We could also try a larger model!\n",
+    "    params=PARAMS\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Create a system prompt - change this!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYSTEM_PROMPT = \"\"\"\n",
+    "You are a news categorization model. Your task is to classify news stories into one of four categories\n",
+    "\n",
+    "CATEGORIES:\n",
+    "{categories}\n",
+    "\n",
+    "TEXT:\n",
+    "{text}\n",
+    "\n",
+    "Please assign the correct category to the text. Answer with the correct category and nothing else.\n",
+    "\n",
+    "Category:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changes to the model:\n",
+    "- The task is framed as something the model \"is\" (a news categorization model), which might help it better focus on the task. Might make the instructions clearer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Generate predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 760/760 [04:17<00:00,  2.95it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "CATEGORIES = \"- \" + \"\\n- \".join(test_df[\"label\"].unique())  # Create a string with all categories\n",
+    "\n",
+    "predictions = []\n",
+    "\n",
+    "for text in tqdm(test_df[\"text\"]):\n",
+    "\n",
+    "    # format the prompt with the categories and the text\n",
+    "    prompt = SYSTEM_PROMPT.format(categories=CATEGORIES, text=text)\n",
+    "    \n",
+    "    # generate the response from the model\n",
+    "    response = model.generate(prompt)\n",
+    "\n",
+    "    # extract the generated text from the response\n",
+    "    prediction = response[\"results\"][0][\"generated_text\"].strip()\n",
+    "\n",
+    "    # append the prediction to the list of predictions\n",
+    "    predictions.append(prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Evaluate performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "      Business       0.52      0.92      0.66       190\n",
+      "      Sci/Tech       0.83      0.41      0.54       190\n",
+      "Space Sci/Tech       0.00      0.00      0.00         0\n",
+      "        Sports       0.93      0.91      0.92       190\n",
+      "         World       0.87      0.65      0.74       190\n",
+      "\n",
+      "      accuracy                           0.72       760\n",
+      "     macro avg       0.63      0.58      0.57       760\n",
+      "  weighted avg       0.79      0.72      0.72       760\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(test_df.label, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Model evaluation and comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BoW Model:\n",
+    "- Training Performance: 100% accuracy\n",
+    "- Test Performance: 83% accuracy\n",
+    "\n",
+    "BERT Model:\n",
+    "- Training Performance: 99% accuracy\n",
+    "- Test Performance: 79% accuracy\n",
+    "\n",
+    "LLM (Large Language Model) Performance:\n",
+    "- Accuracy: 74%\n",
+    "\n",
+    "The LLM model demonstrated the lowest overall accuracy (72%) compared to BoW and BERT. However, it outperformed BoW on the recall for the categories Sport and Business.\n",
+    " The LLM performed well in precision for Sports and World but struggled with some other categories, especially Space Sci/Tech, which received a 0.00 in recall and precision, though the model was to classify into \"one of four categories\"\n",
+    "\n",
+    "The LLM prompt plays a significant role in performance. A well-designed prompt with clear categories and instructions leads to more accurate predictions. In my case, the prompt clearly delineated categories and their definitions, but more specific examples or contextual training data could have improved the model’s ability to predict correctly.\n",
+    "Using examples in the prompt, rather than just listing categories, could help the model understand the types of articles that belong to each category.\n",
+    "\n",
+    "In conclusion,  the LLM performse worse than BoW and BERT model."
    ]
   }
  ],
