--- a/guides/llm_guide.ipynb
+++ b/guides/llm_guide.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "credentials = Credentials(\n",
-    "    url = \"https://eu-de.ml.cloud.ibm.com\",\n",
+    "    url = \"https://us-south.ml.cloud.ibm.com\",\n",
     "    api_key = WX_API_KEY\n",
     ")\n",
     "\n",
     "client = APIClient(\n",
     "    credentials=credentials, \n",
-    "    project_id=\"ea176fc8-4852-4798-bf23-063620807ec9\"\n",
+    "    project_id=\"e2fff713-c98f-4236-8836-47cbe38cd27d\"\n",
     ")"
    ]
   },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'model_id': 'ibm/granite-13b-instruct-v2',\n",
-       " 'created_at': '2025-03-01T23:38:27.533Z',\n",
+       " 'created_at': '2025-03-12T16:26:58.054Z',\n",
        " 'results': [{'generated_text': 'Mix the ingredients together in a bowl. Pour the batter into a cake pan. Bake for 30 minutes',\n",
        "   'generated_token_count': 20,\n",
        "   'input_token_count': 7,\n",
@@ -275,7 +275,7 @@
        "     'value': 0}}]}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,22 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'model_id': 'ibm/granite-13b-instruct-v2',\n",
-       " 'created_at': '2025-03-01T23:39:30.770Z',\n",
-       " 'results': [{'generated_text': 'You can make a cake by following a recipe. You can also make a cake by following a mix. You can also make a cake by following a box. You can also make a cake by following a box and adding your own touches. You can also make a cake by following a recipe and adding your own touches. \\nYou can also make a cake by following a mix and adding your own touches. You can also make a cake by following a box and adding your own touches. You can also make a cake by following a recipe and adding your own touches. You can also make a cake by following a mix and adding your own touches. You can also make a cake by following a box and adding your own touches. \\nYou can also make a cake by following a recipe and adding your own touches. You can also make a cake by following a mix and adding your own touches. You can also make a cake by following a box and adding your own touches. \\nYou can also make a cake by following a recipe and adding your own touches. You can also make a cake by following a mix and adding your own touches. You',\n",
-       "   'generated_token_count': 232,\n",
+       " 'created_at': '2025-03-12T16:27:08.978Z',\n",
+       " 'results': [{'generated_text': '1. Preheat oven to 350 degrees F (175 degrees C). Grease and flour two 9-inch cake pans. 2. In a large bowl, cream together the butter and sugar until light and fluffy. Beat in the eggs one at a time, beating well after each addition. 3. In another bowl, combine the flour, baking soda, and salt. Add the flour mixture to the creamed mixture alternately with the milk, starting and ending with the flour mixture. 4. Stir in the chocolate chips. Pour the batter into the prepared pans and bake for 30 to 35 minutes, or until a toothpick inserted into the center of the cake comes out clean. Cool for 10 minutes in the pans before removing to wire racks to cool completely. icing: 1. In a large bowl, combine the butter, cream cheese, and sugar. Beat with an electric mixer until light and fluffy. 2. Add the vanilla and beat well. 3. Sift in the powdered sugar and beat until smooth. 4. Spread the icing on the cooled cake.',\n",
+       "   'generated_token_count': 219,\n",
        "   'input_token_count': 7,\n",
        "   'stop_reason': 'eos_token',\n",
-       "   'seed': 3987455811}]}"
+       "   'seed': 4063612135}]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((760, 2),)"
+       "(760, 2)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,14 +610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 760/760 [01:47<00:00,  7.06it/s]\n"
+      "100%|██████████| 760/760 [04:01<00:00,  3.14it/s]\n"
      ]
     }
    ],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
