--- a/assignments/llm.ipynb
+++ b/assignments/llm.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "((760, 2),)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,6 +285,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "Business    190\n",
+       "Sci/Tech    190\n",
+       "Sports      190\n",
+       "World       190\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.label.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,23 +344,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "SYSTEM_PROMPT = \"\"\"\n",
-    "You are a news categorization model. Your task is to classify news stories into one of four categories\n",
+    "You are an advanced news categorization model. Your task is to classify a given news article into one of four categories: \n",
     "\n",
     "CATEGORIES:\n",
-    "{categories}\n",
+    "- World: Covers international news, politics, diplomacy, conflicts, and global events.\n",
+    "- Sports: Includes news about athletic competitions, teams, players, and sporting events.\n",
+    "- Business: Encompasses financial markets, companies, economic trends, and corporate news.\n",
+    "- Sci/Tech: Relates to scientific discoveries, technological advancements, and industry innovations.\n",
+    "\n",
+    "To classify the article correctly, follow this step-by-step reasoning:\n",
+    "\n",
+    "1. Identify the main subject of the article. Is it discussing a country's affairs, an economic trend, a sports event, or a scientific/technological breakthrough?\n",
+    "2. Look for keywords and context clues. Does it mention political leaders, stock markets, athletes, or emerging technologies?\n",
+    "3. Determine the dominant theme. If the article covers multiple aspects, prioritize the primary focus.\n",
+    "4. Assign the most appropriate category based on the above reasoning.\n",
     "\n",
     "TEXT:\n",
     "{text}\n",
     "\n",
-    "Please assign the correct category to the text. Answer with the correct category and nothing else.\n",
+    "Choose *ONLY* World, Sports, Business OR Sci/Tech! Based on the analysis, the correct category is:\n",
     "\n",
     "Category:\n",
-    "\"\"\""
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chain of though:\n",
+    "# Think step by step about this. Show your reasoning. The, on a new line choose *ONLY* World, Sports, Business OR SciTech!"
    ]
   },
   {
@@ -343,7 +388,10 @@
    "metadata": {},
    "source": [
     "Changes to the model:\n",
-    "- The task is framed as something the model \"is\" (a news categorization model), which might help it better focus on the task. Might make the instructions clearer."
+    "- The task is framed as something the model \"is\" (a news categorization model), which might help it better focus on the task. Might make the instructions clearer.\n",
+    "- Added detailed descriptions of each category – This provides the model with clearer distinctions between the four categories\n",
+    "- Introduced a step-by-step reasoning process\n",
+    "- Ensured that the model outputs only one of the 4 categories"
    ]
   },
   {
@@ -355,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 760/760 [04:17<00:00,  2.95it/s]\n"
+      "100%|██████████| 760/760 [04:58<00:00,  2.55it/s]\n"
      ]
     }
    ],
@@ -374,10 +422,12 @@
     "for text in tqdm(test_df[\"text\"]):\n",
     "\n",
     "    # format the prompt with the categories and the text\n",
-    "    prompt = SYSTEM_PROMPT.format(categories=CATEGORIES, text=text)\n",
+    "    prompt = SYSTEM_PROMPT.format(text=text)\n",
     "    \n",
     "    # generate the response from the model\n",
     "    response = model.generate(prompt)\n",
+    "\n",
+    "    #     answer = response.split(\"\\n\")[-1] # this should be added if i did chain-of-though\n",
     "\n",
     "    # extract the generated text from the response\n",
     "    prediction = response[\"results\"][0][\"generated_text\"].strip()\n",
@@ -395,37 +445,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "      Business       0.52      0.92      0.66       190\n",
-      "      Sci/Tech       0.83      0.41      0.54       190\n",
-      "Space Sci/Tech       0.00      0.00      0.00         0\n",
-      "        Sports       0.93      0.91      0.92       190\n",
-      "         World       0.87      0.65      0.74       190\n",
+      "    Business       0.47      0.95      0.63       190\n",
+      "    Sci/Tech       0.92      0.36      0.52       190\n",
+      "      Sports       0.96      0.69      0.80       190\n",
+      "       World       0.84      0.73      0.78       190\n",
       "\n",
-      "      accuracy                           0.72       760\n",
-      "     macro avg       0.63      0.58      0.57       760\n",
-      "  weighted avg       0.79      0.72      0.72       760\n",
+      "    accuracy                           0.68       760\n",
+      "   macro avg       0.80      0.68      0.68       760\n",
+      "weighted avg       0.80      0.68      0.68       760\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/opt/anaconda3/envs/aiml25-ma2/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
@@ -453,16 +490,21 @@
     "- Test Performance: 79% accuracy\n",
     "\n",
     "LLM (Large Language Model) Performance:\n",
-    "- Accuracy: 74%\n",
+    "- Accuracy: 68%\n",
     "\n",
-    "The LLM model demonstrated the lowest overall accuracy (72%) compared to BoW and BERT. However, it outperformed BoW on the recall for the categories Sport and Business.\n",
-    " The LLM performed well in precision for Sports and World but struggled with some other categories, especially Space Sci/Tech, which received a 0.00 in recall and precision, though the model was to classify into \"one of four categories\"\n",
+    "The LLM model demonstrated the lowest overall accuracy (68%) compared to BoW and BERT. However, it outperformed BoW on the recall for the category Business.\n",
+    " The LLM performed well in precision for Sports but struggled with some other categories, especially Space Sci/Tech, which received a 0.52 in f1-score.\n",
     "\n",
-    "The LLM prompt plays a significant role in performance. A well-designed prompt with clear categories and instructions leads to more accurate predictions. In my case, the prompt clearly delineated categories and their definitions, but more specific examples or contextual training data could have improved the model’s ability to predict correctly.\n",
+    "The LLM prompt plays a significant role in performance. A well-designed prompt with clear categories and instructions leads to more accurate predictions. In my case, the prompt might be too\n",
     "Using examples in the prompt, rather than just listing categories, could help the model understand the types of articles that belong to each category.\n",
     "\n",
     "In conclusion,  the LLM performse worse than BoW and BERT model."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
